# edn

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/: edn.hpp  edn2.hpp  evaluate.hpp  parse.hpp  parsing.hpp  tokenize.hpp  value.hpp
include/edn/: edn.hpp  evaluate.hpp
src/: CMakeLists.txt  main.cpp  program.clj  program.txt
tests/: CMakeLists.txt  edn.test.cpp  evaluate.test.cpp  matchers.hpp  parse.test.cpp
